--- a/part0/04.md
+++ b/part0/04.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     participant Browser
     participant Server
@@ -11,3 +12,4 @@ sequenceDiagram
     Server->>Browser: JavaScript-file
     Browser->>Server: https://studies.cs.helsinki.fi/exampleapp/data.json
     Server->>Browser: Sends the stored data in the data.json-file.
+```
