--- a/part0/04.md
+++ b/part0/04.md
@@ -3,13 +3,25 @@ sequenceDiagram
     participant Browser
     participant Server
     Browser->>Server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    activate server
     Server->>Browser: 302 Redirect https://studies.cs.helsinki.fi/exampleapp/notes
+    deactivate server
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+    activate server
     Server->>Browser: HTML Document
+    deactivate server
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+    activate server
     Server->>Browser: CSS-file
+    deactivate server
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    activate server
     Server->>Browser: JavaScript-file
+    deactivate server
+    Note right of browser: Browser executes JavaScript-code
     Browser->>Server: https://studies.cs.helsinki.fi/exampleapp/data.json
+    activate server
     Server->>Browser: Sends the stored data in the data.json-file.
+    deactivate server
+    Note right of browser: Browser renders content of json-file.
 ```
