--- a/part0/04.md
+++ b/part0/04.md
@@ -3,25 +3,25 @@ sequenceDiagram
     participant Browser
     participant Server
     Browser->>Server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
-    activate server
+    activate Server
     Server->>Browser: 302 Redirect https://studies.cs.helsinki.fi/exampleapp/notes
-    deactivate server
+    deactivate Server
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/notes
-    activate server
+    activate Server
     Server->>Browser: HTML Document
-    deactivate server
+    deactivate Server
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
-    activate server
+    activate Server
     Server->>Browser: CSS-file
-    deactivate server
+    deactivate Server
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
-    activate server
+    activate Server
     Server->>Browser: JavaScript-file
-    deactivate server
-    Note right of browser: Browser executes JavaScript-code
+    deactivate Server
+    Note right of Browser: Browser executes JavaScript-code
     Browser->>Server: https://studies.cs.helsinki.fi/exampleapp/data.json
-    activate server
+    activate Server
     Server->>Browser: Sends the stored data in the data.json-file.
-    deactivate server
-    Note right of browser: Browser renders content of json-file.
+    deactivate Server
+    Note right of Browser: Browser renders content of json-file.
 ```
