--- a/part0/04.md
+++ b/part0/04.md
@@ -5,6 +5,7 @@ sequenceDiagram
     Browser->>Server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
     activate Server
     Server->>Browser: 302 Redirect https://studies.cs.helsinki.fi/exampleapp/notes
+    Note left of Server: Server stores the new note in the file data.json.
     deactivate Server
     Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate Server
