--- a/part0/04.md
+++ b/part0/04.md
@@ -20,7 +20,7 @@ sequenceDiagram
     Server->>Browser: JavaScript-file
     deactivate Server
     Note right of Browser: Browser executes JavaScript-code
-    Browser->>Server: https://studies.cs.helsinki.fi/exampleapp/data.json
+    Browser->>Server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate Server
     Server->>Browser: Sends the stored data in the data.json-file.
     deactivate Server
